update signature api
