# server/services/analysis.js
@@ -833,7 +833,7 @@ async function querySeqmatrix(req, res, next) {
 
 async function queryExposure(req, res, next) {
   try {
-    const { study, strategy, cancer, signature_set, s3 } = req.query;
+    const { study, strategy, cancer, signatureSetName, s3 } = req.query;
     const connection = req.app.locals.connection;
 
     if (connection && s3 == 'false') {
@@ -841,7 +841,7 @@ async function queryExposure(req, res, next) {
         study,
         strategy,
         cancer,
-        signatureSetName: signature_set,
+        signatureSetName,
       };
       const columns = ['sample', 'signatureName', 'exposure'];
       const data = await getExposureData(connection, query, columns);
@@ -853,7 +853,7 @@ async function queryExposure(req, res, next) {
         Bucket: config.data.bucket,
         Key: path.join(
           config.data.s3,
-          `Exposure/${study}/${strategy}/${cancer}/${signature_set}/data.json`
+          `Exposure/${study}/${strategy}/${cancer}/${signatureSetName}/data.json`
         ),
       };
       const { Body } = await s3.getObject(params).promise();
@@ -867,52 +867,21 @@ async function queryExposure(req, res, next) {
 
 async function querySignature(req, res, next) {
   try {
-    const { profile, matrix, signature_set, s3 } = req.query;
+    const { profile, matrix, signatureSetName } = req.query;
     const connection = req.app.locals.connection;
 
-    if (connection && s3 == 'false') {
-      const query = { profile, matrix, signatureSetName: signature_set };
-      const columns = !signature_set
-        ? ['signatureSetName']
-        : [
-            'strandInfo',
-            'strand',
-            'signatureName',
-            'mutationType',
-            'contribution',
-          ];
-      const data = await getSignatureData(connection, query, columns);
-      res.json(data);
-    } else {
-      const s3 = new AWS.S3();
-      if (profile && signature_set) {
-        const params = {
-          Bucket: config.data.bucket,
-          Key: path.join(
-            config.data.s3,
-            `Signature/${profile}/${signature_set}/data.json`
-          ),
-        };
-        const { Body } = await s3.getObject(params).promise();
-        const data = JSON.parse(Body);
-
-        res.json(data);
-      } else if (profile) {
-        const params = {
-          Bucket: config.data.bucket,
-          Prefix: path.join(config.data.s3, `Signature/${profile}/`),
-          Delimiter: '/',
-        };
-        const { CommonPrefixes } = await s3.listObjectsV2(params).promise();
-        const signatureSets = CommonPrefixes.map((e) =>
-          path.basename(e.Prefix)
-        );
-
-        res.json(signatureSets);
-      } else {
-        throw 'Missing profile and signature_set';
-      }
-    }
+    const query = { profile, matrix, signatureSetName };
+    const columns = !signatureSetName
+      ? ['signatureSetName']
+      : [
+          'strandInfo',
+          'strand',
+          'signatureName',
+          'mutationType',
+          'contribution',
+        ];
+    const data = await getSignatureData(connection, query, columns);
+    res.json(data);
   } catch (error) {
     next(error);
   }
